# air-quality

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
docs/: dart_protocol.md  help.md
docs/dart/: dart_sensor_01.avif  dart_sensor_02.avif  dart_sensor_03.avif  dart_sensor_04.avif
docs/winsen/: winsen_sensor.md
main/: CMakeLists.txt  Kconfig.projbuild  dart_sensor.c  dart_sensor.h  lvgl_screen_ui.c  lvgl_screen_ui.h  main.c  sensor.h  sensor_filter.c  sensor_filter.h  wifi_station.c  wifi_station.h  winsen_sensor.c  winsen_sensor.h
main/protocols/: mqtt_device.c  mqtt_device.h  ntp_time.c  ntp_time.h
tools/simulator/: README.md  dart_client.py  dart_simulator.py  test_scroll.py  test_simple_scroll.py
